--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,12 @@ data.json
 
 # Exclude macOS Finder (System Explorer) View States
 .DS_Store
+
+# Exclude logs
+*.log
+
+# Exclude environment variables
+.env
+
+# Exclude distribution files
+dist/
